[tool.poetry]
name = "tunnelmagic.github.io"
version = "0.1.0"
description = ""
authors = ["Rob van der Leek <robvanderleek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.3.9"
mkdocs-swagger-ui-tag = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
